Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

	* Removed DECLARG and OLDDECLARG from base-defs.h (and any file that
	  was using it.) The next thing to do is make all narrow types
	  wide types and remove narrow.h and wide.h.

Thu Jan 12 01:55:54 1995  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (install): constructed headers come from the build
	tree, not the source tree.

Fri Dec 23 22:29:43 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5.h (krb5_cred): Add enc_part2 member which may point to the
		unecrypted version, if it's available.

Mon Dec 19 21:53:33 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5.h (krb5_context): Add new typdef for krb5_context.

	* libos.h (krb5_os_context): Add new typedef for krb5_os_context.

	* func-proto.h (krb5_init_context, krb5_free_context): Add new
	  declarations.

	* los-proto.h (krb5_init_os_context, krb5_free_os_context): Add new
	  declarations.

Wed Nov 30 16:16:54 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add support for --enable-athena and --with-krb4
		(to set KRB5_KRB4_COMPAT).

	* Makefile.in: Remove remnants of unifdef support for building
		osconf.h and config.h, left over from the imake build system.

Mon Nov 21 14:43:14 1994  Theodore Y. Ts'o  (tytso@dcl)

	* func-proto.h (krb5_encode_kdc_rep, krb5_encrypt_tkt_part):
		Change to use new function prototypes.

	* encryption.h (krb5_eblock_keytype, krb5_eblock_enctype): Define
		new macros for finding the key type and encryption type of
		an encrypion block.

Fri Nov 18 17:53:38 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdb.h (KRB5_KDB_SUPPORT_DESMD5): Add new attribute which defines
		whether or not a server supports DES/MD5.

Fri Nov 18 01:28:47 1994  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (install): elide dependency so $(srcdir) works; use
	$(INSTALL_DATA).
	(ET_HEADERS): new variable for the names of the headers that
	lib/krb5/error_tables builds and installs here (so that they get