@@ -1,3 +1,7 @@
+Sun Jan 22 18:17:06 1995  John Gilmore  (gnu@cygnus.com)
+
+	* preauth.h, rsa-md5.h:  Protect against multiple inclusion.
+
 Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)
 
     * Added krb5_context to all krb5_routines
